# dui

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  build.rs
.github/workflows/: release.yml
Formula/: dui.rb
scripts/: check-actions.sh  debug-workflow.sh  get-sha256.sh  install.ps1  install.sh  monitor-release.sh  publish-cargo.sh  release.sh  trigger-release.sh  version-manager.sh
src/: charts.rs  completion.rs  docker.rs  main.rs  ui.rs  utils.rs
