[package]
name = "docker-gui-cli"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An intuitive Docker management CLI with GUI-like features"
license = "MIT"
repository = "https://github.com/yourusername/docker-gui-cli"
keywords = ["docker", "cli", "container", "management"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.34"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = []
async = ["tokio"]

[[bin]]
name = "docker-cli"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
