[package]
name = "dui-cli"
version = "3.5.0"
edition = "2021"
authors = ["Usman Khan usman@usmankhan.dev"]
description = "An intuitive Docker management CLI built in Rust"
license = "MIT"
repository = "https://github.com/ukhan1219/dui"
keywords = ["docker", "cli", "container", "management"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.34"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
rustyline = "12.0"
crossterm = "0.26"
tui = "0.19"
unicode-segmentation = "1.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = []
async = ["tokio"]

[[bin]]
name = "dui"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
